--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -28,7 +28,7 @@
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="114dp"
+            android:layout_marginEnd="-40dp"
             android:background="@drawable/txtbox"
             android:fontFamily="@font/lionel"
             android:paddingLeft="10dp"
