--- a/app/src/main/res/layout/fragment_python_conditional_statement_1.xml
+++ b/app/src/main/res/layout/fragment_python_conditional_statement_1.xml
@@ -36,13 +36,15 @@
 
         <TextView
             android:id="@+id/P_Variables_Text1"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="Conditions"
+            android:gravity="center"
+            android:text="Condition Statement"
             android:textColor="#000000"
             android:textSize="20sp"
             android:textStyle="bold"
+            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical2"
             app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
             app:layout_constraintTop_toBottomOf="@+id/textView" />
 
