--- a/app/src/main/res/layout/fragment_c_sharp_syntax_2.xml
+++ b/app/src/main/res/layout/fragment_c_sharp_syntax_2.xml
@@ -49,7 +49,7 @@
             <WebView
                 android:id="@+id/c_using_code_example"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:fontFamily="@font/font"
                 tools:ignore="WebViewLayout" />
         </HorizontalScrollView>
@@ -91,7 +91,7 @@
             <WebView
                 android:id="@+id/c_class_code_example1"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:fontFamily="@font/font"
                 tools:ignore="WebViewLayout" />
         </HorizontalScrollView>
@@ -134,7 +134,7 @@
             <WebView
                 android:id="@+id/c_variable_code_example"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:fontFamily="@font/font"
                 tools:ignore="WebViewLayout" />
         </HorizontalScrollView>
@@ -176,7 +176,7 @@
             <WebView
                 android:id="@+id/c_var_func_code_example"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:fontFamily="@font/font"
                 tools:ignore="WebViewLayout" />
         </HorizontalScrollView>
@@ -218,7 +218,7 @@
             <WebView
                 android:id="@+id/c_class_2_code_example"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:fontFamily="@font/font"
                 tools:ignore="WebViewLayout" />
         </HorizontalScrollView>
