--- a/app/src/main/res/layout/fragment_java_data_types_1.xml
+++ b/app/src/main/res/layout/fragment_java_data_types_1.xml
@@ -67,9 +67,10 @@
 
         <TextView
             android:id="@+id/P_datatypes_Text1"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
+            android:gravity="center"
             android:text="@string/data_types"
             android:textColor="#000000"
             android:textSize="20sp"
