--- a/app/src/main/res/layout/fragment_java_inputs_1.xml
+++ b/app/src/main/res/layout/fragment_java_inputs_1.xml
@@ -55,6 +55,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
+            android:gravity="center"
             android:text="Java User Input"
             android:textColor="#000000"
             android:textIsSelectable="false"
