--- a/app/src/main/res/layout/fragment_java_variables_1.xml
+++ b/app/src/main/res/layout/fragment_java_variables_1.xml
@@ -11,30 +11,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:text="@string/variables"
-            android:textAllCaps="true"
-            android:textColor="#000000"
-            android:textSize="24sp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/guideline_horizontal1" />
-
 
         <ImageView
             android:id="@+id/imageView3"
             android:layout_width="54dp"
             android:layout_height="74dp"
-            android:layout_marginTop="16dp"
             android:layout_marginEnd="300dp"
             android:contentDescription="@string/codey_image"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
-            app:layout_constraintTop_toBottomOf="@+id/textView3"
+            app:layout_constraintTop_toTopOf="@+id/guideline_horizontal1"
             app:srcCompat="@drawable/codey_java_cut" />
 
         <TextView
@@ -55,9 +41,10 @@
 
         <TextView
             android:id="@+id/textView14"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
+            android:gravity="center"
             android:text="@string/variables_1"
             android:textColor="#000000"
             android:textSize="20sp"
@@ -96,16 +83,16 @@
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
             android:text="@string/Variables"
             android:textAllCaps="false"
             android:textColor="#000000"
             android:textSize="16sp"
             app:layout_constraintEnd_toStartOf="@+id/guideline_vertical2"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
             app:layout_constraintTop_toBottomOf="@+id/textView23"
             tools:ignore="TextSizeCheck" />
-
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_vertical1"
