--- a/app/src/main/res/layout/fragment_python_comments_1.xml
+++ b/app/src/main/res/layout/fragment_python_comments_1.xml
@@ -68,13 +68,15 @@
 
         <TextView
             android:id="@+id/P_Operators_Text1"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="28dp"
+            android:gravity="center"
             android:text="@string/comments"
             android:textColor="#000000"
             android:textSize="20sp"
             android:textStyle="bold"
+            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical2"
             app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
             app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
@@ -95,13 +97,14 @@
 
         <TextView
             android:id="@+id/P_Comments_Text3"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:text="@string/p_types_of_comments"
             android:textColor="#000000"
             android:textSize="20sp"
             android:textStyle="bold"
+            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical2"
             app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
             app:layout_constraintTop_toBottomOf="@+id/P_Operators_Text2" />
 
@@ -110,7 +113,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:text="@string/c_the_types_of_comments"
+            android:text="@string/p_the_types_of_comments"
             android:textColor="#000000"
             android:textIsSelectable="false"
             android:textSize="18sp"
@@ -125,7 +128,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="C# Single Line Comment"
+            android:text="Python Single Line Comment"
             android:textColor="#000000"
             android:textIsSelectable="false"
             android:textSize="20sp"
@@ -140,7 +143,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:text="The single line comment starts with // (double slash). Let's see an example of single line comment in C#."
+            android:text="Python single-line comment starts with the hashtag symbol (#) with no white spaces and lasts till the end of the line. If the comment exceeds one line then put a hashtag on the next line and continue the Python Comments."
             android:textColor="#000000"
             android:textIsSelectable="false"
             android:textSize="18sp"
@@ -165,7 +168,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:background="@drawable/callout_background"
-            android:text="@string/c_comments_textview9"
+            android:text="@string/P_comments_textview9"
             app:layout_constraintBottom_toBottomOf="@+id/P_Syntax_imageView"
             app:layout_constraintEnd_toStartOf="@+id/guideline_vertical2"
             app:layout_constraintHorizontal_bias="0.0"
