--- a/app/src/main/res/layout/fragment_python_data_types_1.xml
+++ b/app/src/main/res/layout/fragment_python_data_types_1.xml
@@ -67,13 +67,15 @@
 
         <TextView
             android:id="@+id/P_datatypes_Text1"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="28dp"
+            android:gravity="center"
             android:text="@string/data_types"
             android:textColor="#000000"
             android:textSize="20sp"
             android:textStyle="bold"
+            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical2"
             app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
             app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
