--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -8,7 +8,7 @@
         />
     <item
         android:id="@+id/Quiz"
-        android:title="Quiz"
+        android:title="Assessment"
         android:icon="@drawable/quiz"
         />
     <item
