--- a/app/src/main/res/layout/fragment_java_data_types_3.xml
+++ b/app/src/main/res/layout/fragment_java_data_types_3.xml
@@ -123,14 +123,14 @@
         <TextView
             android:id="@+id/p_Operators_Text13"
             android:layout_width="0dp"
-            android:layout_height="45dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
             android:layout_marginTop="8dp"
+            android:justificationMode="none"
             android:text="@string/dt1_d"
             android:textColor="#000000"
             android:textIsSelectable="false"
             android:textSize="18sp"
-            android:justificationMode="none"
             app:layout_constraintEnd_toStartOf="@+id/guideline_vertical2"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
