--- a/app/src/main/res/layout/fragment_java_operators_3.xml
+++ b/app/src/main/res/layout/fragment_java_operators_3.xml
@@ -201,7 +201,7 @@
         <TextView
             android:id="@+id/p_Operators_Text17"
             android:layout_width="0dp"
-            android:layout_height="45dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
             android:layout_marginTop="8dp"
             android:text="@string/ope6"
