--- a/app/src/main/res/layout/fragment_python_variables_2.xml
+++ b/app/src/main/res/layout/fragment_python_variables_2.xml
@@ -98,7 +98,7 @@
             <WebView
                 android:id="@+id/camelCase_naming"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:fontFamily="@font/font"
                 tools:ignore="WebViewLayout" />
         </HorizontalScrollView>
@@ -147,7 +147,7 @@
             <WebView
                 android:id="@+id/pascalCase_naming"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:fontFamily="@font/font"
                 tools:ignore="WebViewLayout" />
         </HorizontalScrollView>
@@ -195,7 +195,7 @@
             <WebView
                 android:id="@+id/snake_case_naming"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:fontFamily="@font/font"
                 tools:ignore="WebViewLayout" />
         </HorizontalScrollView>
