--- a/app/src/main/res/layout/fragment_java_data_types_2.xml
+++ b/app/src/main/res/layout/fragment_java_data_types_2.xml
@@ -194,7 +194,7 @@
         <TextView
             android:id="@+id/p_Operators_Text13"
             android:layout_width="0dp"
-            android:layout_height="45dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
             android:layout_marginTop="8dp"
             android:text="@string/dt_d"
@@ -214,7 +214,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="50dp"
             android:justificationMode="none"
-            android:text="boolean isTrue = true;"
+            android:text="char myChar = 'A';"
             android:textColor="#000000"
             android:textIsSelectable="false"
             android:textSize="18sp"
