--- a/app/src/main/res/layout/fragment_java_syntax_4.xml
+++ b/app/src/main/res/layout/fragment_java_syntax_4.xml
@@ -25,7 +25,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:background="@drawable/callout_background"
-            android:text="Great! You guessed it right! The output to the code is “Hello World”. It’s fun learning Java, isn’t it? Let’s keep learning!"
+            android:text="It’s fun learning Java, isn’t it? Let’s keep learning!"
             app:layout_constraintBottom_toBottomOf="@+id/P_Operators_imageView1"
             app:layout_constraintEnd_toStartOf="@+id/guideline_vertical2"
             app:layout_constraintHorizontal_bias="0.0"
